--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,7 @@
 # Ignore el ambiente de python
 python_env/
 
-# Ignore la cache
-# ignore objects and archives, anywhere in the tree.
-   /config/__pycache__/
-# exclude any /tmp files or folders at any level in the /src/ folder.
+*__pycache__
 
 
 
